# pip-brief

./: .gitignore  LICENSE  README.md  pyproject.toml
pip_brief/: cli.py  core.py
